tests/playwright/resources/kubernetes/pod-configmap-secret.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-configmap-secret
spec:
  containers:
    - name: app
      image: busybox:latest
      envFrom:
        - configMapRef:
            name: my-configmap
        - secretRef: 
            name: my-secret
