tests/playwright/resources/kubernetes/test-image-push.yaml
# /**********************************************************************
#  * Copyright (C) 2025 Red Hat, Inc.
#  *
#  * Licensed under the Apache License, Version 2.0 (the "License");
#  * you may not use this file except in compliance with the License.
#  * You may obtain a copy of the License at
#  *
#  * http://www.apache.org/licenses/LICENSE-2.0
#  *
#  * Unless required by applicable law or agreed to in writing, software
#  * distributed under the License is distributed on an "AS IS" BASIS,
#  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  * See the License for the specific language governing permissions and
#  * limitations under the License.
#  *
#  * SPDX-License-Identifier: Apache-2.0
#  ***********************************************************************/

apiVersion: v1
kind: Pod
metadata:
  name: test-image-push-pod
spec:
  containers:
  - name: test-image-push
    image: ghcr.io/linuxcontainers/alpine
    imagePullPolicy: Never
    command: ["sleep", "3600"]
