tests/playwright/resources/kubernetes/test-pod-configmaps-secrets.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-configmaps-secrets
spec:
  containers:
    - name: test-app-configmap-secret
      image: ghcr.io/podmandesktop-ci/podify-demo-backend:v1
      envFrom:
        - configMapRef:
            name: test-configmap-resource
        - secretRef: 
            name: test-secret-resource
