tests/playwright/resources/kubernetes/test-pod-log-search.yaml
# /**********************************************************************
#  * Copyright (C) 2026 Red Hat, Inc.
#  *
#  * Licensed under the Apache License, Version 2.0 (the "License");
#  * you may not use this file except in compliance with the License.
#  * You may obtain a copy of the License at
#  *
#  * http://www.apache.org/licenses/LICENSE-2.0
#  *
#  * Unless required by applicable law or agreed to in writing, software
#  * distributed under the License is distributed on an "AS IS" BASIS,
#  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  * See the License for the specific language governing permissions and
#  * limitations under the License.
#  *
#  * SPDX-License-Identifier: Apache-2.0
#  ***********************************************************************/

apiVersion: v1
kind: Pod
metadata:
  name: test-pod-log-search
spec:
  containers:
    - name: logger
      image: busybox
      command:
        - /bin/sh
        - -c
        - |
          i=0
          while true; do
            echo "k8s-log-search-token line=${i}"
            i=$((i+1))
            sleep 1
          done
