tests/playwright/resources/kubernetes/test-pod-networking.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-networking
  labels:
    app: test-pod-networking
spec:
  containers:
  - name: test-container
    image: ghcr.io/podmandesktop-ci/nginx
    ports:
    - containerPort: 80
