tests/playwright/resources/kubernetes/test-pod-pvcs.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-pvcs
spec:
  containers:
  - name: test-app-pvc
    image: ghcr.io/podmandesktop-ci/podify-demo-backend:v1
    volumeMounts:
    - name: config-volume
      mountPath: /etc/config
  volumes:
  - name: config-volume
    persistentVolumeClaim:
      claimName: test-pvc-resource
