tests/playwright/resources/kubernetes/test-service-resource.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-service-resource
spec:
  type: ClusterIP
  selector:
    app: test-pod-networking
  ports:
    - port: 8080
      targetPort: 80
